--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <li class="menu-item"><a href="#" class="footer-menu__link link">our teams</a><label
               class="footer-label-slash">&nbsp;&nbsp;|&nbsp;</label></li>
     </ul>
-    <h3 class="copyright">Copyright by phototime - all right reserved</h3>
+    <h3 class="footer-copyright">Copyright by phototime - all right reserved</h3>
   </div>
 </footer>
 
